@@ -1,3 +1,10 @@
+2010-05-17	Bharath Suri <bharath.s.jois@gmail.com>
+
+	* psxfile01/test.c, psxfile01/psxfile01.scn: This file now
+	exercises the _rename_r in libcsupport. For now, it also
+	provides two fsmount_me_h handlers to enable certain error
+	checking paths
+
 2010-04-28	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* psxfile01/test.c: Add check for errno on chdir(NULL).
